tests/invalid/attribute_on_non_class/main.py
x: int = 5
y: int = x.foo
